prueba de comit

--- a/Trabajo Final Algoritmos y Estructura de Datos.vcxproj.filters
+++ b/Trabajo Final Algoritmos y Estructura de Datos.vcxproj.filters
@@ -13,10 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Archivos de origen\Componentes">
+      <UniqueIdentifier>{dd8318f8-b84a-42d7-a50b-8f2ad98c97ba}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Trabajo Final Algoritmos y Estructura de Datos.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Header.h">
+      <Filter>Archivos de origen\Componentes</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
