--- a/Trabajo Final Algoritmos y Estructura de Datos.vcxproj
+++ b/Trabajo Final Algoritmos y Estructura de Datos.vcxproj
@@ -127,10 +127,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Trabajo Final Algoritmos y Estructura de Datos.cpp" />
+    <ClCompile Include="Interfaz.cpp" />
+    <ClCompile Include="Main.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Header.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
