Creacion de admin

--- a/Trabajo Final Algoritmos y Estructura de Datos.vcxproj.filters
+++ b/Trabajo Final Algoritmos y Estructura de Datos.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="User.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
+    <ClInclude Include="Admin.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
