--- a/Trabajo Final Algoritmos y Estructura de Datos.vcxproj
+++ b/Trabajo Final Algoritmos y Estructura de Datos.vcxproj
@@ -132,6 +132,7 @@
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Admin.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
