--- a/Trabajo Final Algoritmos y Estructura de Datos.vcxproj
+++ b/Trabajo Final Algoritmos y Estructura de Datos.vcxproj
@@ -133,6 +133,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Admin.h" />
+    <ClInclude Include="Interfaz.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
