--- a/Trabajo Final Algoritmos y Estructura de Datos.vcxproj.filters
+++ b/Trabajo Final Algoritmos y Estructura de Datos.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClInclude Include="utils.h">
       <Filter>Archivos de encabezado\utils</Filter>
     </ClInclude>
+    <ClInclude Include="utils-f.h">
+      <Filter>Archivos de encabezado\utils</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
